# Mini-Search-Qt

./: CMakeLists.txt  SearchEngine.cpp  SearchEngine.h  main.cpp  mainwindow.cpp  mainwindow.h
